--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version : "3.3"
 services :
   web :
-     image : prabhat167/my-note-app:latest
+     build :
+        context : .
      ports :
          - "8000:8000"
