--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
-version : "3.3"
+version : "3.8"
 services :
   web :
      build :
         context : .
+        dockerfile: Dockerfile
+     container_name: prashant_app_container
+     image: prashant-app:1.0
      ports :
          - "8000:8000"
+     
